Fix(Bug) Update Feedback.tsx component visiblity issue (#6533)
* Update Feedback.tsx

* Update Feedback.tsx

Time reduced to 1.5 seconds, also going to update css

* Update index.css

CSS updated for feedback component animation.

* Update Feedback.tsx

* Update index.css

---------

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -719,3 +719,9 @@ ol.mdx-illustration-block {
     width: 100%;
   }
 }
+
+.exit {
+  opacity: 0;
+  transition: opacity 500ms ease-out;
+  transition-delay: 1s;
+}
